# study_flask-tutorial

./: README.md  pyproject.toml  setup.cfg
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/blog/: index.html  update.html
flaskr/tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
