[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Evan Vesmirov <evan.vesmirov@proton.me>"]
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pytest = "^7.2.0"
coverage = "^7.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
